# compass

./: .gitignore  CITATION.cff  README.md  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.cfg
.github/workflows/: ci.yml  docs.yml
_sources/api/: compass.helperfunctions.add_ellp_patch.rst.txt  compass.helperfunctions.add_ellp_patch2.rst.txt  compass.helperfunctions.calc_prime_1.rst.txt  compass.helperfunctions.color_trafo_2MASS_H.rst.txt  compass.helperfunctions.color_trafo_2MASS_J.rst.txt  compass.helperfunctions.color_trafo_2MASS_K_S.rst.txt  compass.helperfunctions.convert_df_to_array.rst.txt  compass.helperfunctions.convolution2d.rst.txt  compass.helperfunctions.ellipse.rst.txt  compass.helperfunctions.func_const.rst.txt  compass.helperfunctions.func_exp.rst.txt  compass.helperfunctions.func_exp_inc.rst.txt  compass.helperfunctions.func_lin.rst.txt  compass.helperfunctions.gaussian1D.rst.txt  compass.helperfunctions.get_ellipse_props.rst.txt  compass.helperfunctions.get_g2d_func.rst.txt  compass.helperfunctions.get_g2d_parameters.rst.txt  compass.helperfunctions.n_dim_gauss_evaluated.rst.txt  compass.helperfunctions.parallax_projection.rst.txt  compass.model.BackgroundModel.rst.txt  compass.model.Candidate.rst.txt  compass.model.CovarianceMatrix.rst.txt  compass.model.HostStar.rst.txt  compass.model.Survey.rst.txt  compass.preset_plots.odds_ratio_sep_mag_plot.rst.txt  compass.preset_plots.p_ratio_plot.rst.txt  compass.preset_plots.p_ratio_relative_position.rst.txt  compass.preset_plots.plot_pm_plx_binning_parameters.rst.txt  (+2 more)
api/: compass.helperfunctions.add_ellp_patch.html  compass.helperfunctions.add_ellp_patch2.html  compass.helperfunctions.calc_prime_1.html  compass.helperfunctions.color_trafo_2MASS_H.html  compass.helperfunctions.color_trafo_2MASS_J.html  compass.helperfunctions.color_trafo_2MASS_K_S.html  compass.helperfunctions.convert_df_to_array.html  compass.helperfunctions.convolution2d.html  compass.helperfunctions.ellipse.html  compass.helperfunctions.func_const.html  compass.helperfunctions.func_exp.html  compass.helperfunctions.func_exp_inc.html  compass.helperfunctions.func_lin.html  compass.helperfunctions.gaussian1D.html  compass.helperfunctions.get_ellipse_props.html  compass.helperfunctions.get_g2d_func.html  compass.helperfunctions.get_g2d_parameters.html  compass.helperfunctions.n_dim_gauss_evaluated.html  compass.helperfunctions.parallax_projection.html  compass.model.BackgroundModel.html  compass.model.Candidate.html  compass.model.CovarianceMatrix.html  compass.model.HostStar.html  compass.model.Survey.html  compass.preset_plots.odds_ratio_sep_mag_plot.html  compass.preset_plots.p_ratio_plot.html  compass.preset_plots.p_ratio_relative_position.html  compass.preset_plots.plot_pm_plx_binning_parameters.html  compass.preset_plots.pm_mag_plot.html  compass.preset_plots.propagation_plot.html
docs/: conf.py  index.rst
src/compass/: model.py  (+3 more)
tests/: test.py  test_example.py  test_model.py  test_modeling.py
