[metadata]
name = compass
version = 0.0.1
author = Philipp Herz
author_email = herzphilipp@outlook.com
description = Companion Proper Motion Analysis Software System
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
license_file = LICENSE
url = https://github.com/herzphi/compass
project_urls =
    Bug Tracker = https://github.com/herzphi/compass/issues
    Source Code = https://github.com/herzphi/compass
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    =src
packages = find:
python_requires= >=3.7

# Example of how to add dependencies:
install_requires =
    importlib-metadata >= 2.0
    astropy >= 5.2.2
    astroquery >= 0.4.6
    beautifulsoup4 >= 4.12.2
    certifi >= 2022.12.7
    charset-normalizer >= 3.1.0
    contourpy >= 1.0.7
    cycler >= 0.11.0
    fonttools >= 4.39.3
    html5lib >= 1.1
    idna >= 3.4
    importlib-metadata >= 6.5.1
    importlib-resources >= 5.12.0
    jaraco.classes >= 3.2.3
    keyring >= 23.13.1
    kiwisolver >= 1.4.4
    matplotlib >= 3.7.1
    more-itertools >= 9.1.0
    numpy >= 1.24.2
    packaging >= 23.1
    pandas >= 2.0.0
    Pillow >= 9.5.0
    pyerfa >= 2.0.0.3
    pyparsing >= 3.0.9
    python-dateutil >= 2.8.2
    pytz >= 2023.3
    pyvo >= 1.4.1
    PyYAML >= 6.0
    requests >= 2.28.2
    scipy >= 1.10.1
    seaborn >= 0.12.2
    six >= 1.16.0
    soupsieve >= 2.4.1
    tzdata >= 2023.3
    urllib3 >= 1.26.15
    webencodings >= 0.5.1
    zipp >= 3.15.0

 


[options.packages.find]
where = src

[options.extras_require]
docs =
  sphinx
  sphinx-automodapi
  numpydoc
test =
  pytest
  pytest-doctestplus
  flake8
  codecov
  pytest-cov
