[metadata]
name = compass
version = 0.0.1
author = Philipp Herz
author_email = herzphilipp@outlook.com
description = Companion Proper Motion Analysis Software System
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
license_file = LICENSE
url = https://github.com/herzphi/compass
project_urls =
    Bug Tracker = https://github.com/herzphi/compass/issues
    Source Code = https://github.com/herzphi/compass
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    =src
packages = find:
python_requires= >=3.7

# Example of how to add dependencies:
install_requires =
    importlib-metadata >= 2.0
    astropy >= 5.2.2
    astroquery >= 0.4.6
    matplotlib >= 3.7.1
    numpy >= 1.24.2
    pandas >= 2.0.0
    requests >= 2.28.2
    scipy >= 1.10.1
    seaborn >= 0.12.2
    tqdm >= 4.0.0

[options.packages.find]
where = src

[options.extras_require]
docs =
  sphinx
  sphinx-automodapi
  numpydoc
test =
  pytest
  pytest-doctestplus
  flake8
  codecov
  pytest-cov
